<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/navigation_station_list"
        android:name="com.tapandgo.mybikes.ui.stationList.StationListFragment"
        android:label="@string/title_station_list"
        tools:layout="@layout/fragment_station_list" />

    <fragment
        android:id="@+id/navigation_more_info"
        android:name="com.tapandgo.mybikes.ui.moreInfo.MoreInfoFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_more_info" >
        <argument
            android:name="stationNumber"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.tapandgo.mybikes.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_navigation_more_info"
            app:destination="@id/navigation_more_info" />
        <action
            android:id="@+id/action_mapFragment_to_navigation_station_list"
            app:destination="@id/navigation_station_list" />
    </fragment>
</navigation>