<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moreInfo.MoreInfoFragment">

    <TextView
        android:id="@+id/station_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="010 - PICASSO"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bikeAvailabilityCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@color/light_green"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/station_name_field">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/detail_available_bikes"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/more_info_available_bikes_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                tools:text="7"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/green" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bikeStandAvailabilityCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/station_name_field">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_available_stands"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/more_info_available_stands_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                tools:text="8"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/blue" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/more_info_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_status"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bikeAvailabilityCard" />

    <TextView
        android:id="@+id/status_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@id/more_info_status_label"
        app:layout_constraintTop_toBottomOf="@id/bikeAvailabilityCard"
        tools:text="OPEN"/>

    <TextView
        android:id="@+id/more_info_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_address"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_field" />

    <TextView
        android:id="@+id/more_info_address_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@id/more_info_address_label"
        app:layout_constraintTop_toBottomOf="@id/status_field"
        tools:text="10, rue Picasso"/>

    <TextView
        android:id="@+id/more_info_last_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_last_update"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_info_address_field"/>

    <TextView
        android:id="@+id/more_info_last_update_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@id/more_info_last_update_label"
        app:layout_constraintTop_toBottomOf="@id/more_info_address_field"
        tools:text="23/02/2022 14:55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>